k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: express
            port:
              number: 3000
